-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 18, 19
-
Component/s: hotspot
-
b24
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8288796 | 17.0.5-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8289123 | 17.0.5 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
# Internal Error (/workspace/open/src/hotspot/share/opto/loopopts.cpp:1628), pid=66675, tid=23299
# Error: assert(is_dominator(c, n_ctrl)) failed
Current CompileTask:
C2: 1705 542 % !b java.io.BufferedReader::readLine @ 139 (327 bytes)
Stack: [0x000000016d53c000,0x000000016d73f000], sp=0x000000016d739690, free space=2037k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0xfb2340] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x5d8
V [libjvm.dylib+0xfb2a08] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, char*)+0x40
V [libjvm.dylib+0x517994] report_vm_error(char const*, int, char const*, char const*, ...)+0x80
V [libjvm.dylib+0xb75cec] PhaseIdealLoop::compute_early_ctrl(Node*, Node*)+0x1fc
V [libjvm.dylib+0xb74b00] PhaseIdealLoop::try_sink_out_of_loop(Node*)+0x41c
V [libjvm.dylib+0xb73e78] PhaseIdealLoop::split_if_with_blocks_post(Node*)+0x698
V [libjvm.dylib+0xb76570] PhaseIdealLoop::split_if_with_blocks(VectorSet&, Node_Stack&)+0x214
V [libjvm.dylib+0xb61bd8] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0x9a4
V [libjvm.dylib+0x4d5a98] PhaseIdealLoop::PhaseIdealLoop(PhaseIterGVN&, LoopOptsMode)+0xf0
V [libjvm.dylib+0x4c9838] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x7c
V [libjvm.dylib+0x4c9b8c] Compile::optimize_loops(PhaseIterGVN&, LoopOptsMode)+0xd0
V [libjvm.dylib+0x4c4114] Compile::Optimize()+0xfb4
V [libjvm.dylib+0x4c2028] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0x12f4
V [libjvm.dylib+0x3cbe34] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x134
V [libjvm.dylib+0x4dc960] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x604
V [libjvm.dylib+0x4dc15c] CompileBroker::compiler_thread_loop()+0x2c0
V [libjvm.dylib+0xf164bc] JavaThread::thread_main_inner()+0x284
V [libjvm.dylib+0xf13894] Thread::call_run()+0x21c
V [libjvm.dylib+0xce8b04] thread_native_entry(Thread*)+0x160
C [libsystem_pthread.dylib+0x74ec] _pthread_start+0x94
- backported by
-
JDK-8288796 C2 compilation hits assert(is_dominator(c, n_ctrl)) failed
-
- Resolved
-
-
JDK-8289123 C2 compilation hits assert(is_dominator(c, n_ctrl)) failed
-
- Resolved
-
- relates to
-
JDK-8287009 Useless CastPPs added by PhiNode::Ideal optimization
-
- Open
-
-
JDK-8252372 Check if cloning is required to move loads out of loops in PhaseIdealLoop::split_if_with_blocks_post()
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/dd7ab3d7
-
Commit
openjdk/jdk/fa1b56ed
-
Review
openjdk/jdk17u-dev/489
-
Review
openjdk/jdk18u/161
-
Review
openjdk/jdk/8770