8280696: C2 compilation hits assert(is_dominator(c, n_ctrl)) failed

Reviewed-by: kvn, chagedorn, roland